--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build":"npm install --prefix back-end && npm install --prefix front-end && npm run build --prefix front-end",
-    "start":"npm run start --prefix back-end"
+    "server": "npm start --prefix back-end",
+    "client": "npm start --prefix front-end",
+    "build": "cd front-end && npm install && npm run build && cd ../back-end && npm install",
+    "start": "cd back-end && node index.js"
   },
   "keywords": [],
   "author": "",
