--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "chat-app",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "npm start --prefix back-end",
-    "client": "npm start --prefix front-end",
-    "build": "npm install && npm run build && cd ../back-end && npm install",
-    "start": "node index.js"
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "description": ""
+  "license": "ISC"
 }
